--- a/WF_Tabelle.html
+++ b/WF_Tabelle.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta http-equiv="Content-Type" content="text/html; />charset=UTF-8">
         
         <title>Wohlgeformte Tabelle</title>
         
@@ -69,11 +69,11 @@
 		<tfoot>
 			<tr>
       			<td><p>
-    			<a href="http://validator.w3.org/check/referer"><img style="border:0;width:88px;height:31px" src="WF_Tabelle-Dateien/valid-xhtml10.png" alt="Valid XHTML 1.0 Strict"></a><a href="http://validator.w3.org/check?uri=file%3A%2F%2F%2FVolumes%2FMacFD%2Fhoba%2FDesktop%2FXHTML-Tabelle%2FWF_Tabelle.html"></a>
+    			<a href="http://validator.w3.org/check/referer"><img style="border:0;width:88px;height:31px" src="WF_Tabelle-Dateien/valid-xhtml10.png" alt="Valid XHTML 1.0 Strict"></a>
    
       		</p></td>
                 <td><p>
-				<a href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:88px;height:31px" src="WF_Tabelle-Dateien/valid-css2-blue.png" alt="CSS ist valide!"></a><a href="http://jigsaw.w3.org/css-validator/validator$link"></a>
+				<a href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:88px;height:31px" src="WF_Tabelle-Dateien/valid-css2-blue.png" alt="CSS ist valide!"></a>
         	</p></td>
     		</tr>
  		</tfoot>
